--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: #c23721;
+  background: #1878b0;
   border-radius: 50%;
   width: 400px;
   height: 400px;
